--- a/index.html
+++ b/index.html
@@ -1,26 +1,21 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homework 7</title>
-    <link rel="stylesheet" href="/css/common.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" />
+
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title>Gallery</title>
+    <link href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css" rel="stylesheet" />
 </head>
 
+
 <body>
-    <ul>
-        <li><a href="task-1.html">task 1</a></li>
-
-        <li><a href="task-2.html">task 2</a></li>
-
-        <li><a href="task-3.html">task 3</a></li>
-
-        <li><a href="task-4.html">task 4</a></li>
-
-        <li><a href="task-5.html">task 5</a></li>
-        
-        <li><a href="task-6.html">task 6</a></li>
-    </ul>
-</body>
+     <ul class="gallery"></ul>
+    
+        <script async src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
+        <script type="module" src="./js/gallery.js"></script>
+    </body>
 </html>
