--- a/index.html
+++ b/index.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" />
-
-    <link rel="stylesheet" href="./css/styles.css" />
-    <title>Gallery</title>
-    <link href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css" rel="stylesheet" />
+    <title>GOIT-JS-HW-08</title>
+    <link href="
+https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css
+" rel="stylesheet" />
+    <link rel="stylesheet" href="./CSS/styles.css" />
 </head>
 
-
 <body>
-     <ul class="gallery"></ul>
-    
-        <script async src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
-        <script type="module" src="./js/gallery.js"></script>
-    </body>
+    <ul class="gallery">
+        <li class="gallery-item">
+            <a class="gallery-link" href="large-image.jpg">
+                <img class="gallery-image" src="small-image.jpg" data-source="large-image.jpg"
+                    alt="Image description" />
+            </a>
+        </li>
+    </ul>
+    <script async src="
+https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
+"></script>
+    <script src="./js/gallery.js" type="module"></script>
+</body>
+
 </html>
